plugins/value-container-assignment/testData/diagnostics/incorrectUsageTest.diag.txt
/incorrectUsageTest.kt:23:9: error: val cannot be reassigned
        task.input = 42
        ^
/incorrectUsageTest.kt:23:20: error: no applicable 'assign' function found for '=' overload
        task.input = 42
                   ^
/incorrectUsageTest.kt:23:22: error: the integer literal does not conform to the expected type StringProperty
        task.input = 42
                     ^
/incorrectUsageTest.kt:30:13: error: val cannot be reassigned
            input = 42
            ^
/incorrectUsageTest.kt:30:19: error: no applicable 'assign' function found for '=' overload
            input = 42
                  ^
/incorrectUsageTest.kt:30:21: error: the integer literal does not conform to the expected type StringProperty
            input = 42
                    ^
/incorrectUsageTest.kt:38:13: error: unresolved reference: task[0]
        task[0] = StringProperty("Fail")
            ^
/incorrectUsageTest.kt:38:13: error: no set method providing array access
        task[0] = StringProperty("Fail")
            ^

